# Product_Finder

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.evidence  Dockerfile.postgres  README.md  docker-compose.yml  generate_csv_data.py  init.sql  pyproject.toml  scripts_run_products_etl.py
app/: main.py
app/consumer/: db_consumer.py
app/schema/: product.py
data/processed/: products_clean.csv  products_rejected.csv
data/raw/: brands.csv  categories.csv  colours.csv  genders.csv  inventories.csv  inventory.csv  items.csv  just_dirty.csv  orders.csv  products.csv  products_dirty.csv  sizes.csv  store.csv  stores.csv
data/schema/: restock.json  sale.json  stock_update.json
documentation/: Inventory_Events_Data_Pipeline_Guide.md  MVP.md  connect_docker_psql_kafka.md  docker_draft_aira.md  full_runbook.md  git_commands.md  schema.md  sprint2.md
documentation/data_model/: relationship_desc.md
documentation/kafka/: events_pipeline_guide.md  inventory_event.md  kafka_topic_strategy.md  schema.md
documentation/kafka_and_etl/: git_commands.md  schema.md  setup.md  sprint2.md  sprint3.md  sprint4.md  validations.md
documentation/schema/: restock.json  sale.json  stock_update.json
documentation/test/: 01_test_event_endpoint.md  02_test_newproduct.md  03_dirty_data_manual_test.md  (+5 more)
evidence_app/: evidence.config.yaml
scripts/: generate_clean_csv.py  generate_dirty_csv.py  generate_sales_csv.py  load_products.py  replay_sales_events.py  test_sales.py  transform.py
sql/: init.sql  sales_connector_evidence.sql  user_story_queries.sql
test/: tests.md
(+26 files in other folders)
