[project]
name = "product-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "confluent-kafka>=2.13.2",
    "fastapi>=0.128.8",
    "kafka-python>=2.3.0",
    "orjson>=3.11.5",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "structlog>=25.5.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.39.0",
]
